# missile-sim

./: .gitignore  Cargo.toml  README.md  justfile
bench/: bencher.rs
docs/: HOMING_MATHS.md  SIMD.md
examples/: demo.rs  plot.rs  sandbox.rs
ml/: req.txt
ml/notebooks/: data_explore.ipynb
src/: args.rs  lib.rs  main.rs
src/core/: kinematics.rs  kinematics_simd.rs  mod.rs  state.rs
src/entity/: missile.rs  mod.rs  target.rs
src/game/: mod.rs
src/game/bundles/: mod.rs  players.rs
src/game/components/: aircraft.rs  controller.rs  health.rs  input.rs  marker.rs  missile.rs  mod.rs  movement.rs  player.rs
src/guidance/: apn.rs  dp.rs  lp.rs  mod.rs  pp.rs  ppn.rs  tpn.rs  traits.rs
src/scenarios/: mod.rs  presets.rs  random_data.rs  train_data.rs
src/simulation/: engine.rs  metrics.rs  mod.rs  scenario.rs
src/visual/: export.rs  mod.rs
src/visual/exports/: export.rs
src/visual/gui/: mod.rs  rendering.rs
src/visual/plotters/: charts.rs  mod.rs  trajectory_3d.rs
src/visualization/: export.rs  mod.rs  render.rs
src/visualization/plotters/: charts.rs  mod.rs  renderer.rs  trajectory_3d.rs
tests/: guidance_test.rs  kinematics_test.rs  simulation_test.rs  tests.rs
