[package]
name = "missile-sim"
version = "0.1.0"
edition = "2024"

[lib]
name = "missile_sim"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = false
incremental = false
debug = false

[profile.dev]
opt-level = 1
debug = true
incremental = true

[dependencies]
nalgebra = { version = "0.34.2", features = ["serde-serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
wide = "1.2.0"

[dev-dependencies]
rayon = "1.11.0"
rand = "0.10.0"
csv = "1.4.0"
colored = "3.1.1"